stage3/task4/ex4/y.output
Nonterminals useless in grammar

    NEQ


Terminals unused in grammar

    ASSGN


Grammar

    0 $accept: program $end

    1 program: KW_BEGIN Slist END SEMI
    2        | KW_BEGIN END SEMI

    3 Slist: Slist Stmt
    4      | Stmt

    5 Stmt: InputStmt
    6     | OutputStmt
    7     | AsgStmt
    8     | IfStmt
    9     | WhileStmt
   10     | BrkStmt
   11     | ContStmt
   12     | repeatUntilStmt
   13     | doWhileStmt

   14 IfStmt: IF '(' expr ')' THEN Slist ELSE Slist ENDIF SEMI
   15       | IF '(' expr ')' THEN Slist ENDIF SEMI

   16 WhileStmt: WHILE '(' expr ')' DO Slist ENDWHILE SEMI

   17 BrkStmt: BREAK SEMI

   18 ContStmt: CONT SEMI

   19 repeatUntilStmt: REPEAT Slist UNTIL '(' expr ')' SEMI

   20 doWhileStmt: DO Slist WHILE '(' expr ')' SEMI

   21 InputStmt: READ '(' ID ')' SEMI

   22 OutputStmt: WRITE '(' expr ')' SEMI

   23 AsgStmt: ID ASSIGN expr SEMI

   24 expr: expr PLUS expr
   25     | expr MINUS expr
   26     | expr MUL expr
   27     | expr DIV expr
   28     | expr LT expr
   29     | expr GT expr
   30     | expr LE expr
   31     | expr GE expr
   32     | expr NE expr
   33     | expr EQ expr
   34     | '(' expr ')'
   35     | NUM
   36     | ID


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 14 15 16 19 20 21 22 34
    ')' (41) 14 15 16 19 20 21 22 34
    error (256)
    KW_BEGIN <node> (258) 1 2
    END <node> (259) 1 2
    READ <node> (260) 21
    WRITE <node> (261) 22
    PLUS <node> (262) 24
    MINUS <node> (263) 25
    MUL <node> (264) 26
    DIV <node> (265) 27
    NUM <node> (266) 35
    ID <node> (267) 21 23 36
    SEMI <node> (268) 1 2 14 15 16 17 18 19 20 21 22 23
    ASSIGN <node> (269) 23
    LE <node> (270) 30
    LT <node> (271) 28
    GE <node> (272) 31
    GT <node> (273) 29
    NE (274) 32
    EQ <node> (275) 33
    IF <node> (276) 14 15
    WHILE <node> (277) 16 20
    ENDWHILE <node> (278) 16
    ENDIF <node> (279) 14 15
    DO <node> (280) 16 20
    THEN <node> (281) 14 15
    ELSE <node> (282) 14
    BREAK (283) 17
    CONT (284) 18
    REPEAT (285) 19
    UNTIL (286) 19
    ASSGN (287)


Nonterminals, with rules where they appear

    $accept (35)
        on left: 0
    program <node> (36)
        on left: 1 2
        on right: 0
    Slist <node> (37)
        on left: 3 4
        on right: 1 3 14 15 16 19 20
    Stmt <node> (38)
        on left: 5 6 7 8 9 10 11 12 13
        on right: 3 4
    IfStmt <node> (39)
        on left: 14 15
        on right: 8
    WhileStmt <node> (40)
        on left: 16
        on right: 9
    BrkStmt <node> (41)
        on left: 17
        on right: 10
    ContStmt <node> (42)
        on left: 18
        on right: 11
    repeatUntilStmt <node> (43)
        on left: 19
        on right: 12
    doWhileStmt <node> (44)
        on left: 20
        on right: 13
    InputStmt <node> (45)
        on left: 21
        on right: 5
    OutputStmt <node> (46)
        on left: 22
        on right: 6
    AsgStmt <node> (47)
        on left: 23
        on right: 7
    expr <node> (48)
        on left: 24 25 26 27 28 29 30 31 32 33 34 35 36
        on right: 14 15 16 19 20 22 23 24 25 26 27 28 29 30 31 32 33 34


State 0

    0 $accept: • program $end

    KW_BEGIN  shift, and go to state 1

    program  go to state 2


State 1

    1 program: KW_BEGIN • Slist END SEMI
    2        | KW_BEGIN • END SEMI

    END     shift, and go to state 3
    READ    shift, and go to state 4
    WRITE   shift, and go to state 5
    ID      shift, and go to state 6
    IF      shift, and go to state 7
    WHILE   shift, and go to state 8
    DO      shift, and go to state 9
    BREAK   shift, and go to state 10
    CONT    shift, and go to state 11
    REPEAT  shift, and go to state 12

    Slist            go to state 13
    Stmt             go to state 14
    IfStmt           go to state 15
    WhileStmt        go to state 16
    BrkStmt          go to state 17
    ContStmt         go to state 18
    repeatUntilStmt  go to state 19
    doWhileStmt      go to state 20
    InputStmt        go to state 21
    OutputStmt       go to state 22
    AsgStmt          go to state 23


State 2

    0 $accept: program • $end

    $end  shift, and go to state 24


State 3

    2 program: KW_BEGIN END • SEMI

    SEMI  shift, and go to state 25


State 4

   21 InputStmt: READ • '(' ID ')' SEMI

    '('  shift, and go to state 26


State 5

   22 OutputStmt: WRITE • '(' expr ')' SEMI

    '('  shift, and go to state 27


State 6

   23 AsgStmt: ID • ASSIGN expr SEMI

    ASSIGN  shift, and go to state 28


State 7

   14 IfStmt: IF • '(' expr ')' THEN Slist ELSE Slist ENDIF SEMI
   15       | IF • '(' expr ')' THEN Slist ENDIF SEMI

    '('  shift, and go to state 29


State 8

   16 WhileStmt: WHILE • '(' expr ')' DO Slist ENDWHILE SEMI

    '('  shift, and go to state 30


State 9

   20 doWhileStmt: DO • Slist WHILE '(' expr ')' SEMI

    READ    shift, and go to state 4
    WRITE   shift, and go to state 5
    ID      shift, and go to state 6
    IF      shift, and go to state 7
    WHILE   shift, and go to state 8
    DO      shift, and go to state 9
    BREAK   shift, and go to state 10
    CONT    shift, and go to state 11
    REPEAT  shift, and go to state 12

    Slist            go to state 31
    Stmt             go to state 14
    IfStmt           go to state 15
    WhileStmt        go to state 16
    BrkStmt          go to state 17
    ContStmt         go to state 18
    repeatUntilStmt  go to state 19
    doWhileStmt      go to state 20
    InputStmt        go to state 21
    OutputStmt       go to state 22
    AsgStmt          go to state 23


State 10

   17 BrkStmt: BREAK • SEMI

    SEMI  shift, and go to state 32


State 11

   18 ContStmt: CONT • SEMI

    SEMI  shift, and go to state 33


State 12

   19 repeatUntilStmt: REPEAT • Slist UNTIL '(' expr ')' SEMI

    READ    shift, and go to state 4
    WRITE   shift, and go to state 5
    ID      shift, and go to state 6
    IF      shift, and go to state 7
    WHILE   shift, and go to state 8
    DO      shift, and go to state 9
    BREAK   shift, and go to state 10
    CONT    shift, and go to state 11
    REPEAT  shift, and go to state 12

    Slist            go to state 34
    Stmt             go to state 14
    IfStmt           go to state 15
    WhileStmt        go to state 16
    BrkStmt          go to state 17
    ContStmt         go to state 18
    repeatUntilStmt  go to state 19
    doWhileStmt      go to state 20
    InputStmt        go to state 21
    OutputStmt       go to state 22
    AsgStmt          go to state 23


State 13

    1 program: KW_BEGIN Slist • END SEMI
    3 Slist: Slist • Stmt

    END     shift, and go to state 35
    READ    shift, and go to state 4
    WRITE   shift, and go to state 5
    ID      shift, and go to state 6
    IF      shift, and go to state 7
    WHILE   shift, and go to state 8
    DO      shift, and go to state 9
    BREAK   shift, and go to state 10
    CONT    shift, and go to state 11
    REPEAT  shift, and go to state 12

    Stmt             go to state 36
    IfStmt           go to state 15
    WhileStmt        go to state 16
    BrkStmt          go to state 17
    ContStmt         go to state 18
    repeatUntilStmt  go to state 19
    doWhileStmt      go to state 20
    InputStmt        go to state 21
    OutputStmt       go to state 22
    AsgStmt          go to state 23


State 14

    4 Slist: Stmt •

    $default  reduce using rule 4 (Slist)


State 15

    8 Stmt: IfStmt •

    $default  reduce using rule 8 (Stmt)


State 16

    9 Stmt: WhileStmt •

    $default  reduce using rule 9 (Stmt)


State 17

   10 Stmt: BrkStmt •

    $default  reduce using rule 10 (Stmt)


State 18

   11 Stmt: ContStmt •

    $default  reduce using rule 11 (Stmt)


State 19

   12 Stmt: repeatUntilStmt •

    $default  reduce using rule 12 (Stmt)


State 20

   13 Stmt: doWhileStmt •

    $default  reduce using rule 13 (Stmt)


State 21

    5 Stmt: InputStmt •

    $default  reduce using rule 5 (Stmt)


State 22

    6 Stmt: OutputStmt •

    $default  reduce using rule 6 (Stmt)


State 23

    7 Stmt: AsgStmt •

    $default  reduce using rule 7 (Stmt)


State 24

    0 $accept: program $end •

    $default  accept


State 25

    2 program: KW_BEGIN END SEMI •

    $default  reduce using rule 2 (program)


State 26

   21 InputStmt: READ '(' • ID ')' SEMI

    ID  shift, and go to state 37


State 27

   22 OutputStmt: WRITE '(' • expr ')' SEMI

    NUM  shift, and go to state 38
    ID   shift, and go to state 39
    '('  shift, and go to state 40

    expr  go to state 41


State 28

   23 AsgStmt: ID ASSIGN • expr SEMI

    NUM  shift, and go to state 38
    ID   shift, and go to state 39
    '('  shift, and go to state 40

    expr  go to state 42


State 29

   14 IfStmt: IF '(' • expr ')' THEN Slist ELSE Slist ENDIF SEMI
   15       | IF '(' • expr ')' THEN Slist ENDIF SEMI

    NUM  shift, and go to state 38
    ID   shift, and go to state 39
    '('  shift, and go to state 40

    expr  go to state 43


State 30

   16 WhileStmt: WHILE '(' • expr ')' DO Slist ENDWHILE SEMI

    NUM  shift, and go to state 38
    ID   shift, and go to state 39
    '('  shift, and go to state 40

    expr  go to state 44


State 31

    3 Slist: Slist • Stmt
   20 doWhileStmt: DO Slist • WHILE '(' expr ')' SEMI

    READ    shift, and go to state 4
    WRITE   shift, and go to state 5
    ID      shift, and go to state 6
    IF      shift, and go to state 7
    WHILE   shift, and go to state 45
    DO      shift, and go to state 9
    BREAK   shift, and go to state 10
    CONT    shift, and go to state 11
    REPEAT  shift, and go to state 12

    Stmt             go to state 36
    IfStmt           go to state 15
    WhileStmt        go to state 16
    BrkStmt          go to state 17
    ContStmt         go to state 18
    repeatUntilStmt  go to state 19
    doWhileStmt      go to state 20
    InputStmt        go to state 21
    OutputStmt       go to state 22
    AsgStmt          go to state 23


State 32

   17 BrkStmt: BREAK SEMI •

    $default  reduce using rule 17 (BrkStmt)


State 33

   18 ContStmt: CONT SEMI •

    $default  reduce using rule 18 (ContStmt)


State 34

    3 Slist: Slist • Stmt
   19 repeatUntilStmt: REPEAT Slist • UNTIL '(' expr ')' SEMI

    READ    shift, and go to state 4
    WRITE   shift, and go to state 5
    ID      shift, and go to state 6
    IF      shift, and go to state 7
    WHILE   shift, and go to state 8
    DO      shift, and go to state 9
    BREAK   shift, and go to state 10
    CONT    shift, and go to state 11
    REPEAT  shift, and go to state 12
    UNTIL   shift, and go to state 46

    Stmt             go to state 36
    IfStmt           go to state 15
    WhileStmt        go to state 16
    BrkStmt          go to state 17
    ContStmt         go to state 18
    repeatUntilStmt  go to state 19
    doWhileStmt      go to state 20
    InputStmt        go to state 21
    OutputStmt       go to state 22
    AsgStmt          go to state 23


State 35

    1 program: KW_BEGIN Slist END • SEMI

    SEMI  shift, and go to state 47


State 36

    3 Slist: Slist Stmt •

    $default  reduce using rule 3 (Slist)


State 37

   21 InputStmt: READ '(' ID • ')' SEMI

    ')'  shift, and go to state 48


State 38

   35 expr: NUM •

    $default  reduce using rule 35 (expr)


State 39

   36 expr: ID •

    $default  reduce using rule 36 (expr)


State 40

   34 expr: '(' • expr ')'

    NUM  shift, and go to state 38
    ID   shift, and go to state 39
    '('  shift, and go to state 40

    expr  go to state 49


State 41

   22 OutputStmt: WRITE '(' expr • ')' SEMI
   24 expr: expr • PLUS expr
   25     | expr • MINUS expr
   26     | expr • MUL expr
   27     | expr • DIV expr
   28     | expr • LT expr
   29     | expr • GT expr
   30     | expr • LE expr
   31     | expr • GE expr
   32     | expr • NE expr
   33     | expr • EQ expr

    PLUS   shift, and go to state 50
    MINUS  shift, and go to state 51
    MUL    shift, and go to state 52
    DIV    shift, and go to state 53
    LE     shift, and go to state 54
    LT     shift, and go to state 55
    GE     shift, and go to state 56
    GT     shift, and go to state 57
    NE     shift, and go to state 58
    EQ     shift, and go to state 59
    ')'    shift, and go to state 60


State 42

   23 AsgStmt: ID ASSIGN expr • SEMI
   24 expr: expr • PLUS expr
   25     | expr • MINUS expr
   26     | expr • MUL expr
   27     | expr • DIV expr
   28     | expr • LT expr
   29     | expr • GT expr
   30     | expr • LE expr
   31     | expr • GE expr
   32     | expr • NE expr
   33     | expr • EQ expr

    PLUS   shift, and go to state 50
    MINUS  shift, and go to state 51
    MUL    shift, and go to state 52
    DIV    shift, and go to state 53
    SEMI   shift, and go to state 61
    LE     shift, and go to state 54
    LT     shift, and go to state 55
    GE     shift, and go to state 56
    GT     shift, and go to state 57
    NE     shift, and go to state 58
    EQ     shift, and go to state 59


State 43

   14 IfStmt: IF '(' expr • ')' THEN Slist ELSE Slist ENDIF SEMI
   15       | IF '(' expr • ')' THEN Slist ENDIF SEMI
   24 expr: expr • PLUS expr
   25     | expr • MINUS expr
   26     | expr • MUL expr
   27     | expr • DIV expr
   28     | expr • LT expr
   29     | expr • GT expr
   30     | expr • LE expr
   31     | expr • GE expr
   32     | expr • NE expr
   33     | expr • EQ expr

    PLUS   shift, and go to state 50
    MINUS  shift, and go to state 51
    MUL    shift, and go to state 52
    DIV    shift, and go to state 53
    LE     shift, and go to state 54
    LT     shift, and go to state 55
    GE     shift, and go to state 56
    GT     shift, and go to state 57
    NE     shift, and go to state 58
    EQ     shift, and go to state 59
    ')'    shift, and go to state 62


State 44

   16 WhileStmt: WHILE '(' expr • ')' DO Slist ENDWHILE SEMI
   24 expr: expr • PLUS expr
   25     | expr • MINUS expr
   26     | expr • MUL expr
   27     | expr • DIV expr
   28     | expr • LT expr
   29     | expr • GT expr
   30     | expr • LE expr
   31     | expr • GE expr
   32     | expr • NE expr
   33     | expr • EQ expr

    PLUS   shift, and go to state 50
    MINUS  shift, and go to state 51
    MUL    shift, and go to state 52
    DIV    shift, and go to state 53
    LE     shift, and go to state 54
    LT     shift, and go to state 55
    GE     shift, and go to state 56
    GT     shift, and go to state 57
    NE     shift, and go to state 58
    EQ     shift, and go to state 59
    ')'    shift, and go to state 63


State 45

   16 WhileStmt: WHILE • '(' expr ')' DO Slist ENDWHILE SEMI
   20 doWhileStmt: DO Slist WHILE • '(' expr ')' SEMI

    '('  shift, and go to state 64


State 46

   19 repeatUntilStmt: REPEAT Slist UNTIL • '(' expr ')' SEMI

    '('  shift, and go to state 65


State 47

    1 program: KW_BEGIN Slist END SEMI •

    $default  reduce using rule 1 (program)


State 48

   21 InputStmt: READ '(' ID ')' • SEMI

    SEMI  shift, and go to state 66


State 49

   24 expr: expr • PLUS expr
   25     | expr • MINUS expr
   26     | expr • MUL expr
   27     | expr • DIV expr
   28     | expr • LT expr
   29     | expr • GT expr
   30     | expr • LE expr
   31     | expr • GE expr
   32     | expr • NE expr
   33     | expr • EQ expr
   34     | '(' expr • ')'

    PLUS   shift, and go to state 50
    MINUS  shift, and go to state 51
    MUL    shift, and go to state 52
    DIV    shift, and go to state 53
    LE     shift, and go to state 54
    LT     shift, and go to state 55
    GE     shift, and go to state 56
    GT     shift, and go to state 57
    NE     shift, and go to state 58
    EQ     shift, and go to state 59
    ')'    shift, and go to state 67


State 50

   24 expr: expr PLUS • expr

    NUM  shift, and go to state 38
    ID   shift, and go to state 39
    '('  shift, and go to state 40

    expr  go to state 68


State 51

   25 expr: expr MINUS • expr

    NUM  shift, and go to state 38
    ID   shift, and go to state 39
    '('  shift, and go to state 40

    expr  go to state 69


State 52

   26 expr: expr MUL • expr

    NUM  shift, and go to state 38
    ID   shift, and go to state 39
    '('  shift, and go to state 40

    expr  go to state 70


State 53

   27 expr: expr DIV • expr

    NUM  shift, and go to state 38
    ID   shift, and go to state 39
    '('  shift, and go to state 40

    expr  go to state 71


State 54

   30 expr: expr LE • expr

    NUM  shift, and go to state 38
    ID   shift, and go to state 39
    '('  shift, and go to state 40

    expr  go to state 72


State 55

   28 expr: expr LT • expr

    NUM  shift, and go to state 38
    ID   shift, and go to state 39
    '('  shift, and go to state 40

    expr  go to state 73


State 56

   31 expr: expr GE • expr

    NUM  shift, and go to state 38
    ID   shift, and go to state 39
    '('  shift, and go to state 40

    expr  go to state 74


State 57

   29 expr: expr GT • expr

    NUM  shift, and go to state 38
    ID   shift, and go to state 39
    '('  shift, and go to state 40

    expr  go to state 75


State 58

   32 expr: expr NE • expr

    NUM  shift, and go to state 38
    ID   shift, and go to state 39
    '('  shift, and go to state 40

    expr  go to state 76


State 59

   33 expr: expr EQ • expr

    NUM  shift, and go to state 38
    ID   shift, and go to state 39
    '('  shift, and go to state 40

    expr  go to state 77


State 60

   22 OutputStmt: WRITE '(' expr ')' • SEMI

    SEMI  shift, and go to state 78


State 61

   23 AsgStmt: ID ASSIGN expr SEMI •

    $default  reduce using rule 23 (AsgStmt)


State 62

   14 IfStmt: IF '(' expr ')' • THEN Slist ELSE Slist ENDIF SEMI
   15       | IF '(' expr ')' • THEN Slist ENDIF SEMI

    THEN  shift, and go to state 79


State 63

   16 WhileStmt: WHILE '(' expr ')' • DO Slist ENDWHILE SEMI

    DO  shift, and go to state 80


State 64

   16 WhileStmt: WHILE '(' • expr ')' DO Slist ENDWHILE SEMI
   20 doWhileStmt: DO Slist WHILE '(' • expr ')' SEMI

    NUM  shift, and go to state 38
    ID   shift, and go to state 39
    '('  shift, and go to state 40

    expr  go to state 81


State 65

   19 repeatUntilStmt: REPEAT Slist UNTIL '(' • expr ')' SEMI

    NUM  shift, and go to state 38
    ID   shift, and go to state 39
    '('  shift, and go to state 40

    expr  go to state 82


State 66

   21 InputStmt: READ '(' ID ')' SEMI •

    $default  reduce using rule 21 (InputStmt)


State 67

   34 expr: '(' expr ')' •

    $default  reduce using rule 34 (expr)


State 68

   24 expr: expr • PLUS expr
   24     | expr PLUS expr •
   25     | expr • MINUS expr
   26     | expr • MUL expr
   27     | expr • DIV expr
   28     | expr • LT expr
   29     | expr • GT expr
   30     | expr • LE expr
   31     | expr • GE expr
   32     | expr • NE expr
   33     | expr • EQ expr

    MUL  shift, and go to state 52
    DIV  shift, and go to state 53
    LE   shift, and go to state 54
    LT   shift, and go to state 55
    GE   shift, and go to state 56
    GT   shift, and go to state 57
    NE   shift, and go to state 58
    EQ   shift, and go to state 59

    $default  reduce using rule 24 (expr)


State 69

   24 expr: expr • PLUS expr
   25     | expr • MINUS expr
   25     | expr MINUS expr •
   26     | expr • MUL expr
   27     | expr • DIV expr
   28     | expr • LT expr
   29     | expr • GT expr
   30     | expr • LE expr
   31     | expr • GE expr
   32     | expr • NE expr
   33     | expr • EQ expr

    MUL  shift, and go to state 52
    DIV  shift, and go to state 53
    LE   shift, and go to state 54
    LT   shift, and go to state 55
    GE   shift, and go to state 56
    GT   shift, and go to state 57
    NE   shift, and go to state 58
    EQ   shift, and go to state 59

    $default  reduce using rule 25 (expr)


State 70

   24 expr: expr • PLUS expr
   25     | expr • MINUS expr
   26     | expr • MUL expr
   26     | expr MUL expr •
   27     | expr • DIV expr
   28     | expr • LT expr
   29     | expr • GT expr
   30     | expr • LE expr
   31     | expr • GE expr
   32     | expr • NE expr
   33     | expr • EQ expr

    LE  shift, and go to state 54
    LT  shift, and go to state 55
    GE  shift, and go to state 56
    GT  shift, and go to state 57
    NE  shift, and go to state 58
    EQ  shift, and go to state 59

    $default  reduce using rule 26 (expr)


State 71

   24 expr: expr • PLUS expr
   25     | expr • MINUS expr
   26     | expr • MUL expr
   27     | expr • DIV expr
   27     | expr DIV expr •
   28     | expr • LT expr
   29     | expr • GT expr
   30     | expr • LE expr
   31     | expr • GE expr
   32     | expr • NE expr
   33     | expr • EQ expr

    LE  shift, and go to state 54
    LT  shift, and go to state 55
    GE  shift, and go to state 56
    GT  shift, and go to state 57
    NE  shift, and go to state 58
    EQ  shift, and go to state 59

    $default  reduce using rule 27 (expr)


State 72

   24 expr: expr • PLUS expr
   25     | expr • MINUS expr
   26     | expr • MUL expr
   27     | expr • DIV expr
   28     | expr • LT expr
   29     | expr • GT expr
   30     | expr • LE expr
   30     | expr LE expr •
   31     | expr • GE expr
   32     | expr • NE expr
   33     | expr • EQ expr

    NE  shift, and go to state 58
    EQ  shift, and go to state 59

    LE  error (nonassociative)
    LT  error (nonassociative)
    GE  error (nonassociative)
    GT  error (nonassociative)

    $default  reduce using rule 30 (expr)


State 73

   24 expr: expr • PLUS expr
   25     | expr • MINUS expr
   26     | expr • MUL expr
   27     | expr • DIV expr
   28     | expr • LT expr
   28     | expr LT expr •
   29     | expr • GT expr
   30     | expr • LE expr
   31     | expr • GE expr
   32     | expr • NE expr
   33     | expr • EQ expr

    NE  shift, and go to state 58
    EQ  shift, and go to state 59

    LE  error (nonassociative)
    LT  error (nonassociative)
    GE  error (nonassociative)
    GT  error (nonassociative)

    $default  reduce using rule 28 (expr)


State 74

   24 expr: expr • PLUS expr
   25     | expr • MINUS expr
   26     | expr • MUL expr
   27     | expr • DIV expr
   28     | expr • LT expr
   29     | expr • GT expr
   30     | expr • LE expr
   31     | expr • GE expr
   31     | expr GE expr •
   32     | expr • NE expr
   33     | expr • EQ expr

    NE  shift, and go to state 58
    EQ  shift, and go to state 59

    LE  error (nonassociative)
    LT  error (nonassociative)
    GE  error (nonassociative)
    GT  error (nonassociative)

    $default  reduce using rule 31 (expr)


State 75

   24 expr: expr • PLUS expr
   25     | expr • MINUS expr
   26     | expr • MUL expr
   27     | expr • DIV expr
   28     | expr • LT expr
   29     | expr • GT expr
   29     | expr GT expr •
   30     | expr • LE expr
   31     | expr • GE expr
   32     | expr • NE expr
   33     | expr • EQ expr

    NE  shift, and go to state 58
    EQ  shift, and go to state 59

    LE  error (nonassociative)
    LT  error (nonassociative)
    GE  error (nonassociative)
    GT  error (nonassociative)

    $default  reduce using rule 29 (expr)


State 76

   24 expr: expr • PLUS expr
   25     | expr • MINUS expr
   26     | expr • MUL expr
   27     | expr • DIV expr
   28     | expr • LT expr
   29     | expr • GT expr
   30     | expr • LE expr
   31     | expr • GE expr
   32     | expr • NE expr
   32     | expr NE expr •
   33     | expr • EQ expr

    NE  shift, and go to state 58
    EQ  shift, and go to state 59

    $default  reduce using rule 32 (expr)


State 77

   24 expr: expr • PLUS expr
   25     | expr • MINUS expr
   26     | expr • MUL expr
   27     | expr • DIV expr
   28     | expr • LT expr
   29     | expr • GT expr
   30     | expr • LE expr
   31     | expr • GE expr
   32     | expr • NE expr
   33     | expr • EQ expr
   33     | expr EQ expr •

    NE  shift, and go to state 58
    EQ  shift, and go to state 59

    $default  reduce using rule 33 (expr)


State 78

   22 OutputStmt: WRITE '(' expr ')' SEMI •

    $default  reduce using rule 22 (OutputStmt)


State 79

   14 IfStmt: IF '(' expr ')' THEN • Slist ELSE Slist ENDIF SEMI
   15       | IF '(' expr ')' THEN • Slist ENDIF SEMI

    READ    shift, and go to state 4
    WRITE   shift, and go to state 5
    ID      shift, and go to state 6
    IF      shift, and go to state 7
    WHILE   shift, and go to state 8
    DO      shift, and go to state 9
    BREAK   shift, and go to state 10
    CONT    shift, and go to state 11
    REPEAT  shift, and go to state 12

    Slist            go to state 83
    Stmt             go to state 14
    IfStmt           go to state 15
    WhileStmt        go to state 16
    BrkStmt          go to state 17
    ContStmt         go to state 18
    repeatUntilStmt  go to state 19
    doWhileStmt      go to state 20
    InputStmt        go to state 21
    OutputStmt       go to state 22
    AsgStmt          go to state 23


State 80

   16 WhileStmt: WHILE '(' expr ')' DO • Slist ENDWHILE SEMI

    READ    shift, and go to state 4
    WRITE   shift, and go to state 5
    ID      shift, and go to state 6
    IF      shift, and go to state 7
    WHILE   shift, and go to state 8
    DO      shift, and go to state 9
    BREAK   shift, and go to state 10
    CONT    shift, and go to state 11
    REPEAT  shift, and go to state 12

    Slist            go to state 84
    Stmt             go to state 14
    IfStmt           go to state 15
    WhileStmt        go to state 16
    BrkStmt          go to state 17
    ContStmt         go to state 18
    repeatUntilStmt  go to state 19
    doWhileStmt      go to state 20
    InputStmt        go to state 21
    OutputStmt       go to state 22
    AsgStmt          go to state 23


State 81

   16 WhileStmt: WHILE '(' expr • ')' DO Slist ENDWHILE SEMI
   20 doWhileStmt: DO Slist WHILE '(' expr • ')' SEMI
   24 expr: expr • PLUS expr
   25     | expr • MINUS expr
   26     | expr • MUL expr
   27     | expr • DIV expr
   28     | expr • LT expr
   29     | expr • GT expr
   30     | expr • LE expr
   31     | expr • GE expr
   32     | expr • NE expr
   33     | expr • EQ expr

    PLUS   shift, and go to state 50
    MINUS  shift, and go to state 51
    MUL    shift, and go to state 52
    DIV    shift, and go to state 53
    LE     shift, and go to state 54
    LT     shift, and go to state 55
    GE     shift, and go to state 56
    GT     shift, and go to state 57
    NE     shift, and go to state 58
    EQ     shift, and go to state 59
    ')'    shift, and go to state 85


State 82
